# datastore

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
examples/: hash_table.rs  insert.sh  kvstore.rs
src/: block.rs  book.rs  dbms.rs  hash_table.rs  heap.rs  keymap.rs  lib.rs  page.rs  pager.rs  rwmap.rs
src/block/: fs.rs  memory.rs  range.rs  subdivide.rs
src/book/: pager.rs
src/dbms/: hash_table.rs  index_registry.rs  keymap.rs  page_registry.rs  section_registry.rs  wal.rs
src/hash_table/: book.rs  prefix_hasher.rs
src/pager/: fs.rs  memory.rs
