[package]
name = "datastore"
version = "0.0.0"
edition = "2024"
authors = ["Ali Akbay <maakbay@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/m-ali-akbay/datastore"
homepage = "https://github.com/m-ali-akbay/datastore"
keywords = ["datastore"]
categories = ["storage"]
description = "Collection of storage implementations for simple data types"
documentation = "https://docs.rs/datastore"
readme = "README.md"

[dependencies]
heapless = "0.9.1"
thiserror = { version = "2", default-features = false }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }

[dev-dependencies]
tempfile = "3.23.0"

[features]
default = ["dbms"]
dbms = ["serde_json", "serde"]

[lints.clippy]
new_without_default = "allow"
